# UNDCMotor

./: LICENSE  README.md
SchematicLayout/: DCmotorCircuit.kicad_pcb  DCmotorCircuit.kicad_pro  DCmotorCircuit.kicad_sch
code/esp32_code/: platformio.ini
code/esp32_code/src/: definitions.h  main.cpp  secrets.h
code/esp32_unmotor/: connection_settings.h  definitions.h  esp32_unmotor.ino  platformio.ini
code/esp32_unmotor/src/: connection_settings.h  definitions.h  esp32_unmotor.ino
code/python_code/: LICENSE  MANIFEST.in  README.md  control_functions.py  dcmotor_IoT.py  dcmotor_iot.py  identification.py  pyproject.toml
code/python_code/notebooks/: Examples_general_controllers.ipynb  Modeling_and_identification_UNDCMotor.ipynb  PI_and_PID_control_UNThermal_and_UNDCMotor.ipynb
code/python_code/unmotor/: __init__.py  controlsys.py  identsys.py  motorsys.py
code/python_code/unmotor/datafiles/: DCmotor_fo_model_pbrs.csv  DCmotor_fomodel_step.csv  DCmotor_prbs_open_exp.csv  DCmotor_profile_closed_exp.csv  DCmotor_so_model_pbrs.csv  DCmotor_stairs_closed_exp.csv  DCmotor_static_gain_response.csv  DCmotor_step_closed_exp.csv  DCmotor_step_open_exp.csv
