[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "unmotor"
authors = [{name = "Leonardo Bermeo", email = "lbermeoc@unal.edu.co"}]
description = "undcmotor is a package designed for interacting with DC motor via IoT technology."
version = "0.1.13"
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
    "iottalk-paho-mqtt",
    "control",
    "numpy",
    "matplotlib",
    "scipy",
    "ipympl"
]
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
where = ["datafiles"]
include = ["*.csv"]


[project.urls]
Homepage = "https://github.com/nebisman/UNDCMotor.git"
